<resources>
    <string name="app_name">MinifyWorkout</string>
    <string name="minify_workout">Minify Workout</string>
    <string name="history">History</string>
    <string name="start">START</string>
    <string name="image">Image</string>
    <string name="calculator">Calculator</string>
    <string name="metric_units">METRIC UNITS</string>
    <string name="us_units">US UNITS</string>
    <string name="weight_in_kg">WEIGHT (in kg)</string>
    <string name="height_in_cm">HEIGHT (in cm)</string>
    <string name="weight_in_pounds">WEIGHT (in pounds)</string>
    <string name="feet">FEET</string>
    <string name="inches">INCHES</string>
    <string name="your_bmi">YOUR BMI</string>
    <string name="calculate">CALCULATE</string>
    <string name="bmi_categories">BMI Categories:</string>
    <string name="overweight_25_29_9">Overweight = 25–29.9</string>
    <string name="obesity_bmi_of_30_or_greater">Obesity = BMI of 30 or greater</string>
    <string name="normal_weight_18_5_24_9">Normal weight = 18.5–24.9</string>
    <string name="underweight_lt_18_5"><![CDATA[Underweight = <18.5]]></string>
    <string name="congratulations_warrior">Congratulations Warrior!</string>
    <string name="end">END</string>
    <string name="you_have_completed_the_workout">You have completed the workout!</string>
    <string name="finish">FINISH</string>
    <string name="no_data_available">NO DATA AVAILABLE</string>
    <string name="exercise_completed">EXERCISE COMPLETED</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="this_will_stop_your_workout_you_ve_come_this_far_are_you_sure_you_want_to_quit_remember_the_sacrifices_your_family_has_made">This will stop your workout. You\'ve come this far, are you sure you want to quit? Remember the sacrifices your family has made!</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="get_ready_for">GET READY FOR</string>
    <string name="upcoming_exercise">UPCOMING EXERCISE :</string>
    <string name="exercise_name">Exercise Name</string>
</resources>