<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_5dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/IV_main"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:contentDescription="@string/image"
        android:src="@drawable/img_main"
        app:layout_constraintBottom_toTopOf="@+id/FL_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FL_start"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/FL_start"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/item_circular_color_accent_border_ripple_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.616">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_22sp"
            android:textStyle="bold" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/FL_BMI"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@drawable/item_circular_color_accent_background"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/FL_History"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/FL_start">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="BMI"
            android:textColor="@color/white"
            android:textSize="@dimen/_22sp"
            android:textStyle="bold" />

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/calculator"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/FL_BMI"
        app:layout_constraintStart_toStartOf="@id/FL_BMI"
        app:layout_constraintTop_toBottomOf="@id/FL_BMI" />

    <FrameLayout
        android:id="@+id/FL_History"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:background="@drawable/item_circular_color_accent_background"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/FL_BMI"
        app:layout_constraintTop_toBottomOf="@id/FL_start">


        <ImageView
            android:layout_width="50dp"
            android:layout_gravity="center"
            android:layout_height="50dp"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_calendar" />

    </FrameLayout>

    <TextView
        app:layout_constraintTop_toBottomOf="@id/FL_History"
        app:layout_constraintStart_toStartOf="@id/FL_History"
        app:layout_constraintEnd_toEndOf="@id/FL_History"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/history"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:textStyle="bold" />
</androidx.constraintlayout.widget.ConstraintLayout>